<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>sds-sdk-parent</artifactId>
        <groupId>io.openmanufacturing</groupId>
        <version>2.1.3</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>sds-aspect-model-aas-generator</artifactId>
    <name>SDS Aspect Model AAS Generator</name>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.openmanufacturing</groupId>
            <artifactId>sds-aspect-model-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>io.openmanufacturing</groupId>
            <artifactId>sds-aspect-meta-model-java</artifactId>
        </dependency>
        <dependency>
            <groupId>io.admin-shell.aas</groupId>
            <artifactId>model</artifactId>
        </dependency>
        <dependency>
            <groupId>io.admin-shell.aas</groupId>
            <artifactId>dataformat-xml</artifactId>
        </dependency>
       <dependency>
          <groupId>io.admin-shell.aas</groupId>
          <artifactId>dataformat-aasx</artifactId>
       </dependency>
        <dependency>
            <groupId>io.openmanufacturing</groupId>
            <artifactId>sds-test-resources</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
